feat(user): Implementation UserRequest - UserResponse