@@ -1,9 +1,12 @@
 package com.apirest.finanzaspersonales.service.user.imple;
 
+import com.apirest.finanzaspersonales.controller.model.request.UserRequest;
+import com.apirest.finanzaspersonales.controller.model.response.UserResponse;
 import com.apirest.finanzaspersonales.entity.User;
 import com.apirest.finanzaspersonales.exceptions.User.UserNotFoundException;
 import com.apirest.finanzaspersonales.repository.user.UserDao;
 import com.apirest.finanzaspersonales.service.user.UserServiceQuery;
+import com.apirest.finanzaspersonales.utils.UserMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.beans.factory.annotation.Autowired;
 
@@ -14,10 +17,12 @@ import java.util.stream.Collectors;
 public class UserSeriviceQueryImpl implements UserServiceQuery {
 
     private final UserDao userDao;
+    private final UserMapper userMapper;
 
     @Autowired
-    public UserSeriviceQueryImpl(UserDao userDao) {
+    public UserSeriviceQueryImpl(UserDao userDao, UserMapper userMapper) {
         this.userDao = userDao;
+        this.userMapper = userMapper;
     }
 
     @Override
@@ -36,12 +41,12 @@ public class UserSeriviceQueryImpl implements UserServiceQuery {
     */
 
     @Override
-    public User getUserByEmail(String email) {
+    public UserResponse getUserByEmail(String email) {
         User user = userDao.findByEmail(email);
         if (user == null) {
             throw new UserNotFoundException("Usuario con correo " + email + " no encontrado.");
         }
-        return user;
+        return userMapper.mapToUserResponse(user);
     }
 
     @Override
@@ -55,17 +60,20 @@ public class UserSeriviceQueryImpl implements UserServiceQuery {
     }
 
     @Override
-    public List<User> findByName(String name) {
+    public List<UserResponse> findByName(String name) {
         List<User> users = userDao.findAll();
         List<User> result = users.stream()
                 .filter(user -> user.getUsername().equalsIgnoreCase(name))
-                .collect(Collectors.toList());
+                .toList();
 
         if (result.isEmpty()) {
             throw new UserNotFoundException("No se encontraron usuarios con el nombre: " + name);
         }
 
-        return result;
+        return result.stream()
+                .map(userMapper::mapToUserResponse)
+                .collect(Collectors.toList());
     }
+
 }
 
